fix: Highlighted text - use white-space: nowrap so do not make multiline

--- a/client/src/pages/scss/about.scss
+++ b/client/src/pages/scss/about.scss
@@ -92,6 +92,7 @@
         border-radius: 2.5px;
         color: white;
         cursor: pointer;
+        white-space: nowrap;
       }
     }
   }
